--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,13 +30,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Set base path for GitHub Pages
-        run: |
-          if [ "${{ github.event.repository.name }}" = "${GITHUB_REPOSITORY_OWNER}.github.io" ]; then
-            echo "BASE_PATH=/" >> $GITHUB_ENV
-          else
-            echo "BASE_PATH=/${{ github.event.repository.name }}/" >> $GITHUB_ENV
-          fi
+      - name: Set base path for custom domain
+        run: echo "BASE_PATH=/" >> $GITHUB_ENV
 
       - name: Build
         run: npm run build
